try to solve overflowing VH bug on real phone

--- a/src/styles/components/GameplayLayout.module.scss
+++ b/src/styles/components/GameplayLayout.module.scss
@@ -1,10 +1,9 @@
 @use '../abstractions' as *;
 
 .container {
-  height: 100%;
   @include wrapper;
+  height: var(--app-height);
   padding-bottom: 24px;
-  min-height: 100%;
   background-color: hsl(var(--clr-slate-100));
   display: flex;
   flex-direction: column;
